# anderssorby.github.io

./: .gitignore  CNAME  LICENSE  README.md  _config.yml  about.md  anderssorby-github-io.cabal  index.html  index.md  myblog.cabal  release.nix  site.hs
_layouts/: default.html
_posts/: 2017-10-24-welcome-to-jekyll.markdown  2019-04-05-who-am-i-now.markdown  2019-05-23-master-thesis-on-gan.md  2019-10-30-fumbling-with-functional-programming.md  2020-07-14-making-a-game-in-haskell.md
_site/: about.html  archive.html  index.html
_site/.well-known/: brave-rewards-verification.txt
_site/posts/: 2019-04-05-who-am-i-now.html  2019-05-23-project-thesis.html  2019-06-24-finalized-master-thesis-on-gan.html  2019-10-30-fumbling-with-functional-programming.html  2020-07-14-making-a-game-in-haskell.html
nix/: sources.json
posts/: 2019-04-05-who-am-i-now.markdown  2019-05-23-project-thesis.md  2019-06-24-finalized-master-thesis-on-gan.md  2020-08-13-quick-look-at-formality.md  2020-11-28-hosting-on-ipfs.md
static/css/: spaceg.stylesheets.css
templates/: footer.html  head.html  nav.html  page.html
