name:                myblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Anderssorby/myblog#readme
license:             BSD3
license-file:        LICENSE
author:              Anders Christiansen Sørby
maintainer:          anders@sorby.xyz
copyright:           2020 Anders Christiansen Sørby
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
